# rust-ptx-linker

./: .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs  cli.yml
examples/: README.md
examples/deep-deps-example/dependencies/dummy_math/: Cargo.toml
examples/deep-deps-example/dependencies/dummy_math/src/: lib.rs
examples/deep-deps-example/dependencies/dummy_utils/: Cargo.toml
examples/depenencies/: Cargo.toml  nvptx64-nvidia-cuda.json
examples/depenencies/dependencies/dummy_math/src/: lib.rs
examples/depenencies/dependencies/dummy_utils/src/: lib.rs
examples/depenencies/src/: lib.rs
examples/intrinsics/: Cargo.toml  Xargo.toml
examples/intrinsics/src/: image.rs  lib.rs
examples/undefined-ref/: Cargo.toml
examples/undefined-ref-example/: nvptx64-nvidia-cuda.json
examples/undefined-ref/src/: lib.rs
llvm/: external-refs.cpp  find-external-refs.cpp  internalize.cpp  rename-globals.cpp
llvm/helpers/: pass-runner.h  visitors.cpp  visitors.h
src/: error.rs  lib.rs  linker.rs  llvm.rs  main.rs  session.rs
src/application/: logging.rs  main.rs
src/llvm/: ffi.rs  ffi_ty.rs  iter.rs  message.rs  mod.rs  rename_globals.rs
src/llvm_legacy/: ffi.rs  mod.rs
src/passes/: external_references.rs  globals.rs  internalize.rs  mod.rs  rename.rs  rename_globals.rs
src/rustc-dylib-wrapper/: main.rs
src/session/: args_parser.rs  mod.rs
targets/: nvptx-nvidia-cuda.json  nvptx64-nvidia-cuda.json
tests/: args_parser.rs  cli.rs  linker.rs  session.rs
tests/codegen/: input.kernel.bc  input.lib.rlib  mod.rs  output.debug.ll  output.debug.ptx  output.release.ll  output.release.ptx
tests/codegen/consts/: mod.rs
tests/codegen/consts/outputs/: release.ll  release.ptx
tests/codegen/debug/: mod.rs
tests/codegen/debug/inputs/: libnvptx_builtins-34b89b2693088fee.rlib
tests/codegen/dependencies/: mod.rs
tests/codegen/dependencies/inputs/: libdummy_math-74eeab9afcfbdc2e.rlib  libdummy_math-8d1ba91f02f92ba6.rlib  libdummy_utils-890580f027b43b6d.rlib  libdummy_utils-efe1e3357e6f3320.rlib
tests/codegen/dependencies/outputs/: debug.ll  debug.ptx  release.ll  release.ptx
tests/codegen/inputs/: libdummy_math-5d32b2be875cc4d4.rlib  libdummy_utils-315daf14970b3da5.rlib
tests/codegen/intrinsics/: mod.rs
tests/codegen/intrinsics/inputs/: libnvptx_builtins-165a9d1a4a13bfa2.rlib
tests/codegen/intrinsics/outputs/: release.ll  release.ptx
tests/codegen/outputs/: debug.ll  debug.ptx  release.ll  release.ptx
tests/codegen/undefined_ref/: mod.rs
tests/helpers/: mod.rs
tests/steps/: assembly.rs  ir.rs  mod.rs  verification.rs
