[package]
name = "ptx-linker"
version = "0.7.4"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
license = "MIT"

readme = "README.md"
description = "NVPTX modules linker"
repository = "https://github.com/denzp/rust-ptx-linker"
categories = ["development-tools", "development-tools::build-utils", "external-ffi-bindings"]
keywords = ["llvm", "cuda", "nvptx", "linker"]
autotests = true

[[bin]]
name = "ptx-linker"
doc = false
path = "src/application/main.rs"

[lib]
name = "ptx_linker"

[dependencies]
log = "0.3"
fern = "0.4"
colored = "1.5"
error-chain = "0.10"
ar = "0.5"
clap = { version = "2.31", features = ["yaml", "suggestions", "color"] }
rustc-llvm-proxy = "0.1"

[dependencies.llvm-sys]
version = "60"
features = ["no-llvm-linking"]

[dev-dependencies]
failure = "0.1"
crate-compile-test = "0.2"

[[test]]
name = "linker"
harness = false

[badges]
appveyor = { repository = "denzp/rust-ptx-linker", branch = "master", service = "github" }
travis-ci = { repository = "denzp/rust-ptx-linker", branch = "master" }
maintenance = { status = "passively-maintained" }
