[package]
name = "ptx-linker"
version = "0.9.1"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
license = "MIT"

readme = "README.md"
description = "NVPTX modules linker"
repository = "https://github.com/denzp/rust-ptx-linker"
categories = ["development-tools", "development-tools::build-utils", "external-ffi-bindings"]
keywords = ["llvm", "cuda", "nvptx", "linker"]
edition = "2018"

[badges]
appveyor = { repository = "denzp/rust-ptx-linker", branch = "master", service = "github" }
travis-ci = { repository = "denzp/rust-ptx-linker", branch = "master" }
maintenance = { status = "experimental" }

[features]
default = ["llvm-proxy"]
llvm-proxy = [
    "rustc-llvm-proxy",
    "llvm-sys/no-llvm-linking",
    "llvm-sys/disable-alltargets-init"
]

[dependencies]
ar = "0.8"
clap = "2.33"
either = "1.5"
env_logger = "0.7"
failure = "0.1"
llvm-sys = "80"
log = "0.4"

[dependencies.rustc-llvm-proxy]
version = "0.2"
optional = true

[dev-dependencies]
crate-compile-test = "0.2"

[[test]]
name = "linker"
harness = false
